// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Select Basic 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c1 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: pointer;
  display: block;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  position: relative;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c0 select {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 44px;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  padding-right: 37px;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c0 select *,
.c0 select *::before,
.c0 select *::after {
  box-sizing: border-box;
}

.c0 select:-ms-expand {
  display: none;
}

.c0 select:focus {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  outline: none;
  padding: 0 8px;
  padding-right: 36px;
}

.c2 {
  cursor: pointer;
  fill: currentColor;
  left: auto;
  pointer-events: none;
  position: absolute;
  right: 8px;
  top: 14px;
}

select:active + .c2 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

<div
    className="c0"
  >
    <select
      aria-invalid={false}
      aria-required={true}
      autoComplete="on"
      autoFocus={false}
      defaultValue="one"
      formNoValidate={true}
      id="select-basic"
      multiple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onInvalid={[Function]}
      required={true}
    >
      <option
        value="one"
      >
        One
      </option>
      <option
        value="two"
      >
        Two
      </option>
    </select>
    <svg
      aria-hidden={true}
      className="c1 c2"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0 24 0 24 24 0 24"
        fill="none"
      />
      <path
        d="M7.41 8.84 12 13.42 16.59 8.84 18 10.25 12 16.25 6 10.25"
      />
    </svg>
  </div>,
]
`;

exports[`Storyshots Components/Select With Browser Validation 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.6);
  display: block;
}

.c14 *,
.c14 *::before,
.c14 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 420px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c22 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
}

.c22 *,
.c22 *::before,
.c22 *::after {
  box-sizing: border-box;
}

.c22::-moz-focus-inner {
  border-style: none;
}

.c25 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  line-height: 1.25rem;
  text-transform: capitalize;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: center;
}

.c25::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c8 {
  font-family: "Inter",sans-serif;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.38636363636363635rem);
  -ms-transform: translateY(0.38636363636363635rem);
  transform: translateY(0.38636363636363635rem);
  text-align: initial;
}

.c8::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.8727272727272727rem;
}

.c11 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: initial;
}

.c11::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c16 {
  font-family: "Inter",sans-serif;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.32954545454545453rem);
  -ms-transform: translateY(0.32954545454545453rem);
  transform: translateY(0.32954545454545453rem);
  text-align: initial;
}

.c16::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.759090909090909rem;
}

.c15 {
  font-family: "Inter",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.2272727272727273rem);
  -ms-transform: translateY(0.2272727272727273rem);
  transform: translateY(0.2272727272727273rem);
  text-align: initial;
}

.c15::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.5545454545454546rem;
}

.c12 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c12 *,
.c12 *::before,
.c12 *::after {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 *,
.c9 *::before,
.c9 *::after {
  box-sizing: border-box;
}

.c23 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  border-radius: 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 100%;
  background-color: #38A169;
  box-shadow: 0 1px 4px rgba(0,0,0,0.16);
  color: rgba(255,255,255,1);
  height: 44px;
  padding: 0px 24px;
}

.c23 *,
.c23 *::before,
.c23 *::after {
  box-sizing: border-box;
}

.c23:hover {
  background-color: hsl(148,48.4%,34%);
}

.c23:active {
  box-shadow: none;
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.c24 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  visibility: visible;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  box-shadow: none;
  color: rgba(0,0,0,0.87);
  position: relative;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0.87);
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c2 {
  border: 1px solid rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
}

.c21 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c21 *,
.c21 *::before,
.c21 *::after {
  box-sizing: border-box;
}

.c21 > * {
  margin-left: 8px;
}

.c21 > :first-child {
  margin-left: 0;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 16px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c10 *,
.c10 *::before,
.c10 *::after {
  box-sizing: border-box;
}

.c10:first-child {
  padding-top: 32px;
}

.c10:last-child {
  padding-bottom: 32px;
}

.c10:only-child {
  padding-bottom: 32px;
  padding-top: 32px;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 32px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c5:only-child {
  padding-bottom: 32px;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-top: -4px;
  overflow: hidden;
  padding: 4px 0px;
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c19 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c18 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: pointer;
  display: block;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  position: relative;
}

.c18 *,
.c18 *::before,
.c18 *::after {
  box-sizing: border-box;
}

.c18 select {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.38);
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 44px;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  padding-right: 37px;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c18 select *,
.c18 select *::before,
.c18 select *::after {
  box-sizing: border-box;
}

.c18 select:-ms-expand {
  display: none;
}

.c18 select:focus {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  outline: none;
  padding: 0 8px;
  padding-right: 36px;
}

.c20 {
  cursor: pointer;
  fill: currentColor;
  left: auto;
  pointer-events: none;
  position: absolute;
  right: 8px;
  top: 14px;
}

select:active + .c20 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c17 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 8px;
}

.c17 *,
.c17 *::before,
.c17 *::after {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 16px;
}

.c13 *,
.c13 *::before,
.c13 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      />
      <div
        className="c4"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <h2
                className="c7 c8"
              >
                <span
                  className="c9"
                >
                  Using Browser Validation
                </span>
              </h2>
            </div>
          </div>
          <div
            className="c10"
          >
            <p
              className="c7 c11"
            >
              <span
                className="c12"
              >
                You can enable built-in HTML validation by setting formNoValidate=false on your Select. Try submitting the form below.
              </span>
            </p>
            <div
              className="c13"
            />
            <p
              className="c14 c15"
            >
              <span
                className="c12"
              >
                Note: Many form components set noValidate=true. Make sure it is also set to false on your form.
              </span>
            </p>
          </div>
          <div
            className="c10"
          >
            <label
              className="c7 c16"
              htmlFor="swbv-plan-type"
            >
              <span
                className="c12"
              >
                Plan Type
              </span>
            </label>
            <div
              className="c17"
            />
            <div
              className="c18"
            >
              <select
                aria-invalid={false}
                aria-required={true}
                autoComplete="on"
                autoFocus={false}
                defaultValue=""
                formNoValidate={false}
                id="swbv-plan-type"
                multiple={false}
                name="plan-type"
                onBlur={[Function]}
                onChange={[Function]}
                onInvalid={[Function]}
                required={true}
              >
                <option
                  value=""
                >
                  -- select a plan --
                </option>
                <option
                  value={1}
                >
                  Free
                </option>
                <option
                  value={2}
                >
                  Pro ($0.99/month)
                </option>
              </select>
              <svg
                aria-hidden={true}
                className="c19 c20"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0 24 0 24 24 0 24"
                  fill="none"
                />
                <path
                  d="M7.41 8.84 12 13.42 16.59 8.84 18 10.25 12 16.25 6 10.25"
                />
              </svg>
            </div>
          </div>
          <div
            className="c21"
          >
            <button
              aria-busy={false}
              className="c22 c23"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="submit"
            >
              <div
                className="c24"
              >
                <span
                  className="c7 c25"
                >
                  <span
                    className="c12"
                  >
                    Save Changes
                  </span>
                </span>
              </div>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Select With Controlled State 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 420px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c8 {
  font-family: "Inter",sans-serif;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.38636363636363635rem);
  -ms-transform: translateY(0.38636363636363635rem);
  transform: translateY(0.38636363636363635rem);
  text-align: initial;
}

.c8::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.8727272727272727rem;
}

.c11 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: initial;
}

.c11::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c13 {
  font-family: "Inter",sans-serif;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.32954545454545453rem);
  -ms-transform: translateY(0.32954545454545453rem);
  transform: translateY(0.32954545454545453rem);
  text-align: initial;
}

.c13::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.759090909090909rem;
}

.c12 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c12 *,
.c12 *::before,
.c12 *::after {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 *,
.c9 *::before,
.c9 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  box-shadow: none;
  color: rgba(0,0,0,0.87);
  position: relative;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0.87);
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c2 {
  border: 1px solid rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 16px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c10 *,
.c10 *::before,
.c10 *::after {
  box-sizing: border-box;
}

.c10:first-child {
  padding-top: 32px;
}

.c10:last-child {
  padding-bottom: 32px;
}

.c10:only-child {
  padding-bottom: 32px;
  padding-top: 32px;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 32px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c5:only-child {
  padding-bottom: 32px;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-top: -4px;
  overflow: hidden;
  padding: 4px 0px;
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c16 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c15 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: pointer;
  display: block;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  position: relative;
}

.c15 *,
.c15 *::before,
.c15 *::after {
  box-sizing: border-box;
}

.c15 select {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 44px;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  padding-right: 37px;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c15 select *,
.c15 select *::before,
.c15 select *::after {
  box-sizing: border-box;
}

.c15 select:-ms-expand {
  display: none;
}

.c15 select:focus {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  outline: none;
  padding: 0 8px;
  padding-right: 36px;
}

.c17 {
  cursor: pointer;
  fill: currentColor;
  left: auto;
  pointer-events: none;
  position: absolute;
  right: 8px;
  top: 14px;
}

select:active + .c17 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c14 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 8px;
}

.c14 *,
.c14 *::before,
.c14 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      />
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <h2
              className="c7 c8"
            >
              <span
                className="c9"
              >
                Controlled Usage
              </span>
            </h2>
          </div>
        </div>
        <div
          className="c10"
        >
          <p
            className="c7 c11"
          >
            <span
              className="c12"
            >
              Selects can be used as controlled components with React state. This is useful when you are using a Select outside of form.
            </span>
          </p>
        </div>
        <div
          className="c10"
        >
          <label
            className="c7 c13"
            htmlFor="swcs-color"
          >
            <span
              className="c12"
            >
              Controlled Select
            </span>
          </label>
          <div
            className="c14"
          />
          <div
            className="c15"
          >
            <select
              aria-invalid={false}
              aria-required={true}
              autoComplete="on"
              autoFocus={false}
              formNoValidate={true}
              id="swcs-color"
              multiple={false}
              name="color"
              onBlur={[Function]}
              onChange={[Function]}
              onInvalid={[Function]}
              required={true}
              value="red"
            >
              <option
                value=""
              >
                -- select a color --
              </option>
              <option
                label="Red"
                value="red"
              />
              <option
                label="Blue"
                value="blue"
              />
              <option
                label="Green"
                value="green"
              />
            </select>
            <svg
              aria-hidden={true}
              className="c16 c17"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0 24 0 24 24 0 24"
                fill="none"
              />
              <path
                d="M7.41 8.84 12 13.42 16.59 8.84 18 10.25 12 16.25 6 10.25"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Select With Custom Attributes 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 420px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c7 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: initial;
}

.c7::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c8 *,
.c8 *::before,
.c8 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  box-shadow: none;
  color: rgba(0,0,0,0.87);
  position: relative;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0.87);
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c2 {
  border: 1px solid rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 16px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c5:first-child {
  padding-top: 32px;
}

.c5:last-child {
  padding-bottom: 32px;
}

.c5:only-child {
  padding-bottom: 32px;
  padding-top: 32px;
}

.c11 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: pointer;
  display: block;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  position: relative;
}

.c10 *,
.c10 *::before,
.c10 *::after {
  box-sizing: border-box;
}

.c10 select {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.38);
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 44px;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  padding-right: 37px;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c10 select *,
.c10 select *::before,
.c10 select *::after {
  box-sizing: border-box;
}

.c10 select:-ms-expand {
  display: none;
}

.c10 select:focus {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  outline: none;
  padding: 0 8px;
  padding-right: 36px;
}

.c12 {
  cursor: pointer;
  fill: currentColor;
  left: auto;
  pointer-events: none;
  position: absolute;
  right: 8px;
  top: 14px;
}

select:active + .c12 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 24px;
}

.c9 *,
.c9 *::before,
.c9 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      />
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <p
            className="c6 c7"
          >
            <span
              className="c8"
            >
              This select is adding custom data attributes for test automation
            </span>
          </p>
          <div
            className="c9"
          />
          <div
            className="c10"
          >
            <select
              aria-invalid={false}
              aria-required={true}
              autoComplete="on"
              autoFocus={false}
              data-test-id="color"
              defaultValue=""
              formNoValidate={true}
              id="swca-color"
              multiple={false}
              name="color"
              onBlur={[Function]}
              onChange={[Function]}
              onInvalid={[Function]}
              required={true}
            >
              <option
                value=""
              >
                --select a color--
              </option>
              <option
                value="red"
              >
                Red
              </option>
              <option
                value="green"
              >
                Green
              </option>
              <option
                value="blue"
              >
                Blue
              </option>
            </select>
            <svg
              aria-hidden={true}
              className="c11 c12"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0 24 0 24 24 0 24"
                fill="none"
              />
              <path
                d="M7.41 8.84 12 13.42 16.59 8.84 18 10.25 12 16.25 6 10.25"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Select With JS Validation 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c15 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.6);
  display: block;
}

.c15 *,
.c15 *::before,
.c15 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 420px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c20 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: rgba(0,0,0,0.87);
  display: block;
}

.c20 *,
.c20 *::before,
.c20 *::after {
  box-sizing: border-box;
}

.c26 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  color: inherit;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: 0;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
}

.c26 *,
.c26 *::before,
.c26 *::after {
  box-sizing: border-box;
}

.c26::-moz-focus-inner {
  border-style: none;
}

.c29 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  line-height: 1.25rem;
  text-transform: capitalize;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: center;
}

.c29::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c8 {
  font-family: "Inter",sans-serif;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.38636363636363635rem);
  -ms-transform: translateY(0.38636363636363635rem);
  transform: translateY(0.38636363636363635rem);
  text-align: initial;
}

.c8::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.8727272727272727rem;
}

.c12 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: initial;
}

.c12::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c21 {
  font-family: "Inter",sans-serif;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.32954545454545453rem);
  -ms-transform: translateY(0.32954545454545453rem);
  transform: translateY(0.32954545454545453rem);
  text-align: initial;
}

.c21::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.759090909090909rem;
}

.c16 {
  font-family: "Inter",sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.2272727272727273rem);
  -ms-transform: translateY(0.2272727272727273rem);
  transform: translateY(0.2272727272727273rem);
  text-align: initial;
}

.c16::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.5545454545454546rem;
}

.c13 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c13 *,
.c13 *::before,
.c13 *::after {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 *,
.c9 *::before,
.c9 *::after {
  box-sizing: border-box;
}

.c27 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  border-radius: 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  overflow: hidden;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 100%;
  background-color: #38A169;
  box-shadow: 0 1px 4px rgba(0,0,0,0.16);
  color: rgba(255,255,255,1);
  height: 44px;
  padding: 0px 24px;
}

.c27 *,
.c27 *::before,
.c27 *::after {
  box-sizing: border-box;
}

.c27:hover {
  background-color: hsl(148,48.4%,34%);
}

.c27:active {
  box-shadow: none;
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.c28 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  visibility: visible;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  box-shadow: none;
  color: rgba(0,0,0,0.87);
  position: relative;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0.87);
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c2 {
  border: 1px solid rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
}

.c25 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c25 *,
.c25 *::before,
.c25 *::after {
  box-sizing: border-box;
}

.c25 > * {
  margin-left: 8px;
}

.c25 > :first-child {
  margin-left: 0;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 16px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c10 *,
.c10 *::before,
.c10 *::after {
  box-sizing: border-box;
}

.c10:first-child {
  padding-top: 32px;
}

.c10:last-child {
  padding-bottom: 32px;
}

.c10:only-child {
  padding-bottom: 32px;
  padding-top: 32px;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 32px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c5:only-child {
  padding-bottom: 32px;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-top: -4px;
  overflow: hidden;
  padding: 4px 0px;
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c23 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c18 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c18 *,
.c18 *::before,
.c18 *::after {
  box-sizing: border-box;
}

.c19 {
  margin-bottom: 8px;
}

.c17 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: #38A169;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c17 *,
.c17 *::before,
.c17 *::after {
  box-sizing: border-box;
}

.c17:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c17:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c17:visited,
.c17:active {
  color: #38A169;
}

.c22 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: pointer;
  display: block;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  position: relative;
}

.c22 *,
.c22 *::before,
.c22 *::after {
  box-sizing: border-box;
}

.c22 select {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.38);
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 44px;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  padding-right: 37px;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c22 select *,
.c22 select *::before,
.c22 select *::after {
  box-sizing: border-box;
}

.c22 select:-ms-expand {
  display: none;
}

.c22 select:focus {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  outline: none;
  padding: 0 8px;
  padding-right: 36px;
}

.c24 {
  cursor: pointer;
  fill: currentColor;
  left: auto;
  pointer-events: none;
  position: absolute;
  right: 8px;
  top: 14px;
}

select:active + .c24 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c14 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 24px;
}

.c14 *,
.c14 *::before,
.c14 *::after {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c11 *,
.c11 *::before,
.c11 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1 c2"
    >
      <div
        className="c3"
      />
      <div
        className="c4"
      >
        <form
          noValidate={true}
          onSubmit={[Function]}
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <h2
                className="c7 c8"
              >
                <span
                  className="c9"
                >
                  Using JavaScript Validation
                </span>
              </h2>
            </div>
          </div>
          <div
            className="c10"
          >
            <div
              className="c11"
            >
              <p
                className="c7 c12"
              >
                <span
                  className="c13"
                >
                  In this example, a Select and Inputs are being rendered and controlled with external state. This example uses react-hook-form to manage state and provide error validation.
                </span>
              </p>
              <div
                className="c14"
              />
              <p
                className="c15 c16"
              >
                <span
                  className="c13"
                >
                  Note: this example uses the 
                  <a
                    className="c17"
                    href={true}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    rel={null}
                  >
                    FormControl
                  </a>
                   
                  component to manage labels and error messages
                </span>
              </p>
            </div>
          </div>
          <div
            className="c10"
          >
            <div
              className="c18"
            >
              <div
                className="c19"
              >
                <label
                  className="c20 c21"
                  htmlFor="swjsv-plan-type"
                  id="swjsv-plan-type-label"
                >
                  <span
                    className="c13"
                  >
                    Plan Type
                  </span>
                </label>
              </div>
              <div
                className="c22"
              >
                <select
                  aria-disabled={false}
                  aria-errormessage={null}
                  aria-invalid={false}
                  aria-labelledby="swjsv-plan-type-label"
                  aria-required={true}
                  autoComplete="on"
                  autoFocus={false}
                  defaultValue=""
                  disabled={false}
                  formNoValidate={true}
                  id="swjsv-plan-type"
                  multiple={false}
                  name="plan-type"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onInvalid={[Function]}
                  required={true}
                >
                  <option
                    value=""
                  >
                    -- select a plan --
                  </option>
                  <option
                    value={1}
                  >
                    Free
                  </option>
                  <option
                    value={2}
                  >
                    Pro ($0.99/month)
                  </option>
                </select>
                <svg
                  aria-hidden={true}
                  className="c23 c24"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0 24 0 24 24 0 24"
                    fill="none"
                  />
                  <path
                    d="M7.41 8.84 12 13.42 16.59 8.84 18 10.25 12 16.25 6 10.25"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            className="c25"
          >
            <button
              aria-busy={false}
              className="c26 c27"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              type="submit"
            >
              <div
                className="c28"
              >
                <span
                  className="c7 c29"
                >
                  <span
                    className="c13"
                  >
                    Save Changes
                  </span>
                </span>
              </div>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Select With Min Width 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c1 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: pointer;
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  position: relative;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c0 select {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 44px;
  min-width: 250px;
  outline: 1px solid gray;
  outline-color: transparent;
  padding-right: 37px;
  -webkit-tap-highlight-color: transparent;
}

.c0 select *,
.c0 select *::before,
.c0 select *::after {
  box-sizing: border-box;
}

.c0 select:-ms-expand {
  display: none;
}

.c0 select:focus {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  outline: none;
  padding: 0 8px;
  padding-right: 36px;
}

.c2 {
  cursor: pointer;
  fill: currentColor;
  left: auto;
  pointer-events: none;
  position: absolute;
  right: 8px;
  top: 14px;
}

select:active + .c2 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

<div
    className="c0"
  >
    <select
      aria-invalid={false}
      aria-required={true}
      autoComplete="on"
      autoFocus={false}
      defaultValue="one"
      formNoValidate={true}
      id="swmw-number"
      multiple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onInvalid={[Function]}
      required={true}
    >
      <option
        value="one"
      >
        One
      </option>
      <option
        value="two"
      >
        Two
      </option>
    </select>
    <svg
      aria-hidden={true}
      className="c1 c2"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0 24 0 24 24 0 24"
        fill="none"
      />
      <path
        d="M7.41 8.84 12 13.42 16.59 8.84 18 10.25 12 16.25 6 10.25"
      />
    </svg>
  </div>,
]
`;

exports[`Storyshots Components/Select With Placeholder 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c1 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: pointer;
  display: block;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  position: relative;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c0 select {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: rgba(0,0,0,0.38);
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 44px;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  padding-right: 37px;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c0 select *,
.c0 select *::before,
.c0 select *::after {
  box-sizing: border-box;
}

.c0 select:-ms-expand {
  display: none;
}

.c0 select:focus {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  outline: none;
  padding: 0 8px;
  padding-right: 36px;
}

.c2 {
  cursor: pointer;
  fill: currentColor;
  left: auto;
  pointer-events: none;
  position: absolute;
  right: 8px;
  top: 14px;
}

select:active + .c2 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

<div
    className="c0"
  >
    <select
      aria-invalid={false}
      aria-required={true}
      autoComplete="on"
      autoFocus={false}
      defaultValue=""
      formNoValidate={true}
      id="swp-number"
      multiple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onInvalid={[Function]}
      required={true}
    >
      <option
        value=""
      >
        -- select a number --
      </option>
      <option
        value="one"
      >
        One
      </option>
      <option
        value="one"
      >
        Two
      </option>
    </select>
    <svg
      aria-hidden={true}
      className="c1 c2"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0 24 0 24 24 0 24"
        fill="none"
      />
      <path
        d="M7.41 8.84 12 13.42 16.59 8.84 18 10.25 12 16.25 6 10.25"
      />
    </svg>
  </div>,
]
`;

exports[`Storyshots Components/Select With States 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c2 {
  display: inline-block;
  fill: currentColor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 16px;
  height: 1em;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: not-allowed;
  display: block;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  position: relative;
  opacity: 0.5;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c1 select {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: rgba(0,0,0,0.12);
  border: 1px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.12);
  border-radius: 4px;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 44px;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  padding-right: 37px;
  -webkit-tap-highlight-color: transparent;
  cursor: not-allowed;
  width: 100%;
}

.c1 select *,
.c1 select *::before,
.c1 select *::after {
  box-sizing: border-box;
}

.c1 select:-ms-expand {
  display: none;
}

.c1 select:focus {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: rgba(0,0,0,0.38);
  outline: none;
  padding: 0 8px;
  padding-right: 36px;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  cursor: pointer;
  display: block;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font-family: inherit;
  font-size: 1rem;
  height: 44px;
  max-width: 100%;
  min-width: 0;
  position: relative;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c5 select {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0 9px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid rgba(0,0,0,0.12);
  border-color: #F03D3D;
  border-radius: 4px;
  color: currentColor;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  font-size: inherit;
  height: 44px;
  min-width: 0;
  outline: 1px solid gray;
  outline-color: transparent;
  padding-right: 37px;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
}

.c5 select *,
.c5 select *::before,
.c5 select *::after {
  box-sizing: border-box;
}

.c5 select:-ms-expand {
  display: none;
}

.c5 select:focus {
  border: 2px solid rgba(0,0,0,0.12);
  border-color: #F03D3D;
  outline: none;
  padding: 0 8px;
  padding-right: 36px;
}

.c3 {
  cursor: pointer;
  fill: currentColor;
  left: auto;
  pointer-events: none;
  position: absolute;
  right: 8px;
  top: 14px;
}

select:active + .c3 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 24px;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <select
        aria-disabled={true}
        aria-invalid={false}
        aria-required={true}
        autoComplete="on"
        autoFocus={false}
        defaultValue="disabled"
        disabled={true}
        formNoValidate={true}
        id="sws-disabled"
        multiple={false}
        onBlur={[Function]}
        onChange={[Function]}
        onInvalid={[Function]}
        required={true}
      >
        <option
          selected={true}
          value="disabled"
        >
          Disabled
        </option>
      </select>
      <svg
        aria-hidden={true}
        className="c2 c3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0 24 0 24 24 0 24"
          fill="none"
        />
        <path
          d="M7.41 8.84 12 13.42 16.59 8.84 18 10.25 12 16.25 6 10.25"
        />
      </svg>
    </div>
    <div
      className="c4"
    />
    <div
      className="c5"
    >
      <select
        aria-invalid={true}
        aria-required={true}
        autoComplete="on"
        autoFocus={false}
        defaultValue="invalid"
        formNoValidate={true}
        id="sws-invalid"
        multiple={false}
        onBlur={[Function]}
        onChange={[Function]}
        onInvalid={[Function]}
        required={true}
      >
        <option
          selected={true}
          value="invalid"
        >
          Invalid
        </option>
        <option
          value="still-invalid"
        >
          Still Invalid
        </option>
      </select>
      <svg
        aria-hidden={true}
        className="c2 c3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0 24 0 24 24 0 24"
          fill="none"
        />
        <path
          d="M7.41 8.84 12 13.42 16.59 8.84 18 10.25 12 16.25 6 10.25"
        />
      </svg>
    </div>
  </div>,
]
`;
